--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello</h1>
+    
     <section class="bg"></section>
-    <div class="loading-test">0%</div>
+    <div class="loading-test">Click Here</div>
 
 
     <script src="./vender/jquery.js"></script>
